force-app/main/default/objects/Unit__c/fields/Time_To_Validate_PR__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Validate_PR__c</fullName>
    <label>Time To Validate PR</label>
    <type>DateTime</type>
</CustomField>