force-app/main/default/objects/Unit__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <formula>IF(
  ISPICKVAL(Tower__r.Tower_Type__c , &apos;Villas&apos;),
  Chargeable_Area__c,
  RERA_Suite_Area_Sq_Ft__c+Balcony_Area_Sq_Ft__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>