force-app/main/default/objects/Unit__c/fields/Tower_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Tower_Arabic__c</fullName>
    <label>Tower Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>