force-app/main/default/objects/Unit__c/fields/Unavailable_for_Inventory_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_for_Inventory_Matrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unavailable for Inventory Matrix</label>
    <type>Checkbox</type>
</CustomField>