force-app/main/default/objects/Unit__c/fields/Unit_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Completion_Date__c</fullName>
    <label>Unit Completion Date</label>
    <type>Date</type>
</CustomField>