force-app/main/default/objects/Unit__c/fields/Unit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Unit_Hold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Hold</label>
    <referenceTo>Unit_Hold__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>