force-app/main/default/objects/Unit__c/fields/Unit_Hold_min_percentage__c.field-meta.xml
<CustomField>
    <fullName>Unit_Hold_min_percentage__c</fullName>
    <label>Unit Hold min percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>