force-app/main/default/objects/Unit__c/fields/Unit_Release_Date_by_Development__c.field-meta.xml
<CustomField>
    <fullName>Unit_Release_Date_by_Development__c</fullName>
    <description>This field refer date of units released by development team</description>
    <label>Unit Release Date by Development</label>
    <type>Date</type>
</CustomField>