force-app/main/default/objects/Unit__c/fields/Unit_Type_Variant__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_Variant__c</fullName>
    <description>Unit Variant Type</description>
    <label>Unit Type Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>