force-app/main/default/objects/Unit__c/fields/Water_Electricity_Drainage_Sewerage_C__c.field-meta.xml
<CustomField>
    <fullName>Water_Electricity_Drainage_Sewerage_C__c</fullName>
    <label>Water Electricity Drainage Sewerage C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>