force-app/main/default/objects/Unit__c/validationRules/Reason_for_Cancellation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Cancellation_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(Unit_Status__c) &amp;&amp; ISPICKVAL(Unit_Status__c,&apos;Available&apos;) &amp;&amp; Reason_for_Cancellation__c = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Reason_for_Cancellation__c</errorDisplayField>
    <errorMessage>Please enter the Reason for Cancellation before making the unit available.</errorMessage>
</ValidationRule>