force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unit_Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>All</label>
</ListView>