force-app/main/default/objects/Unit__c/listViews/Epsilon_Units.listView-meta.xml
<ListView>
    <fullName>Epsilon_Units</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <columns>Unit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Epsilon</value>
    </filters>
    <filters>
        <field>Unit_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Epsilon Units</label>
</ListView>